--- a/chat-grpc/client/pyproject.toml
+++ b/chat-grpc/client/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "grpcio>=1.70.0",
+    "protobuf>=5.29.3",
     "pyside6>=6.8.2.1",
+    "types-protobuf>=5.29.1.20250208",
 ]
 
 [dependency-groups]
