--- a/tempus/CMakeLists.txt
+++ b/tempus/CMakeLists.txt
@@ -16,7 +16,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Sets compiler flags
-set(CXX_FLAGS -Wall -Wconversion -Wextra -Wpedantic -Wshadow -Wunused)
+set(CXX_FLAGS -Wall -Wextra -Wpedantic -Wshadow -Wunused)
 if(CMAKE_BUILD_TYPE STREQUAL Debug)
   set(CXX_FLAGS ${CXX_FLAGS} -g -O0)
 endif()
@@ -27,5 +27,5 @@ endif()
 # Adds executable
 add_executable(exe)
 target_compile_options(exe PRIVATE ${CXX_FLAGS})
-target_sources(exe PRIVATE src/main.cpp)
+target_sources(exe PRIVATE src/main.cpp src/logic.cpp)
 target_include_directories(exe PRIVATE src)
