--- a/mousedb/server/exe_server/CMakeLists.txt
+++ b/mousedb/server/exe_server/CMakeLists.txt
@@ -15,15 +15,17 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+find_package(mousedb REQUIRED)
 find_package(Boost CONFIG REQUIRED COMPONENTS asio)
 find_package(GTest CONFIG REQUIRED)
 
 enable_testing()
 
-set(EXE_SERVER_SRC src/main.cpp)
+set(EXE_SERVER_SRC src/main.cpp src/server.cpp)
 add_executable(exe_server ${EXE_SERVER_SRC})
 set_target_properties(exe_server PROPERTIES OUTPUT_NAME exe/main)
 target_include_directories(exe_server PRIVATE src)
+target_link_libraries(exe_server PRIVATE mousedb::database Boost::asio)
 
 file(GLOB_RECURSE EXE_SERVER_TEST_SRC CONFIGURE_DEPENDS *.test.cpp)
 if(EXE_SERVER_TEST_SRC)
