--- a/mousedb/server/compose.yaml
+++ b/mousedb/server/compose.yaml
@@ -7,8 +7,8 @@ services:
     stdin_open: true
     tty: true
     volumes:
-      - ./exe_server:/code/exe_server:delegated
-      - ./lib_database:/code/lib_database:delegated
+      - ./exe_server:/code/exe_server
+      - ./lib_database:/code/lib_database
       - root:/root
 
 volumes:
