feat: client simple put/get implemented

--- a/mousedb/client/CMakeLists.txt
+++ b/mousedb/client/CMakeLists.txt
@@ -7,18 +7,21 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-find_package(Boost CONFIG REQUIRED COMPONENTS asio)
+# Find Boost with asio and program_options
+find_package(Boost CONFIG REQUIRED COMPONENTS asio program_options)
 find_package(GTest CONFIG REQUIRED)
 find_package(quill CONFIG REQUIRED)
 
 enable_testing()
 
-set(EXE_CLIENT_SRC src/main.cpp)
+# Client executable
+set(EXE_CLIENT_SRC src/client_main.cpp)
 add_executable(exe_client ${EXE_CLIENT_SRC})
-set_target_properties(exe_client PROPERTIES OUTPUT_NAME exe/main)
+set_target_properties(exe_client PROPERTIES OUTPUT_NAME exe/client_main)
 target_include_directories(exe_client PRIVATE src)
-target_link_libraries(exe_client PRIVATE Boost::asio quill::quill)
+target_link_libraries(exe_client PRIVATE Boost::asio Boost::program_options quill::quill)
 
+# Client tests
 file(GLOB_RECURSE EXE_CLIENT_TEST_SRC CONFIGURE_DEPENDS *.test.cpp)
 if(EXE_CLIENT_TEST_SRC)
   add_executable(exe_client_test ${EXE_CLIENT_TEST_SRC})
