feat: lib_database progress

--- a/mousedb/server/lib_database/CMakeLists.txt
+++ b/mousedb/server/lib_database/CMakeLists.txt
@@ -10,9 +10,6 @@ if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 20.1)
   message(FATAL_ERROR "Clang 20.1 or higher is required.")
 endif()
 
-set(CMAKE_CXX_EXTENSIONS ON)
-set(CMAKE_CXX_STANDARD 23)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 find_package(Boost CONFIG REQUIRED COMPONENTS dynamic_bitset)
@@ -23,10 +20,40 @@ enable_testing()
 
 include(GNUInstallDirs)
 
-set(LIB_DATABASE_SRC src/arena.cpp src/memtable.cpp)
+function(set_target_cxx_properties_ target)
+  set_target_properties(
+    ${target}
+    PROPERTIES CXX_EXTENSIONS ON
+               CXX_STANDARD 23
+               CXX_STANDARD_REQUIRED ON)
+endfunction()
+
+function(target_compile_and_link_options_ target build_type)
+  target_compile_options(${target} PRIVATE -Wall -Wextra -Wpedantic)
+
+  if(build_type STREQUAL "Debug")
+    target_compile_options(${target} PRIVATE -g -O0)
+    target_link_options(
+      ${target} PRIVATE -fsanitize=address,memory,thread,undefined
+      -fno-omit-frame-pointer)
+  elseif(build_type STREQUAL "Release")
+    target_compile_options(${target} PRIVATE -DNDEBUG -O3 -Werror)
+    target_link_options(${target} PRIVATE -flto)
+  else()
+    message(
+      FATAL_ERROR
+        "target_compile_and_link_options_: unknown build_type '${build_type}' for target '${target}'"
+    )
+  endif()
+endfunction()
+
+set(LIB_DATABASE_SRC src/arena.cpp src/memtable.cpp
+                     src/mousedb/database/core.cpp src/random.cpp)
 add_library(lib_database STATIC ${LIB_DATABASE_SRC})
 set_target_properties(lib_database PROPERTIES EXPORT_NAME database OUTPUT_NAME
                                                                    database)
+set_target_cxx_properties_(lib_database)
+target_compile_and_link_options_(lib_database ${CMAKE_BUILD_TYPE})
 target_include_directories(
   lib_database
   PRIVATE src
@@ -64,6 +91,8 @@ file(GLOB_RECURSE LIB_DATABASE_TEST_SRC CONFIGURE_DEPENDS *.test.cpp)
 if(LIB_DATABASE_TEST_SRC)
   add_executable(lib_database_test ${LIB_DATABASE_TEST_SRC})
   set_target_properties(lib_database_test PROPERTIES OUTPUT_NAME exe/test)
+  set_target_cxx_properties_(lib_database_test)
+  target_compile_and_link_options_(lib_database_test Release)
   target_include_directories(lib_database_test PRIVATE src)
   target_link_libraries(lib_database_test PRIVATE GTest::gtest_main
                                                   lib_database)
@@ -76,6 +105,8 @@ file(GLOB_RECURSE LIB_DATABASE_BENCH_SRC CONFIGURE_DEPENDS *.bench.cpp)
 if(LIB_DATABASE_BENCH_SRC)
   add_executable(lib_database_bench ${LIB_DATABASE_BENCH_SRC})
   set_target_properties(lib_database_bench PROPERTIES OUTPUT_NAME exe/bench)
+  set_target_cxx_properties_(lib_database_bench)
+  target_compile_and_link_options_(lib_database_bench Release)
   target_include_directories(lib_database_bench PRIVATE src)
   target_link_libraries(lib_database_bench PRIVATE benchmark::benchmark_main
                                                    lib_database)
