--- a/mousedb/server/lib_database/CMakeLists.txt
+++ b/mousedb/server/lib_database/CMakeLists.txt
@@ -47,7 +47,7 @@ function(target_compile_and_link_options_ target build_type)
   endif()
 endfunction()
 
-set(LIB_DATABASE_SRC src/arena.cpp src/memtable.cpp
+set(LIB_DATABASE_SRC src/arena.cpp src/filter.cpp src/memtable.cpp
                      src/mousedb/database/core.cpp src/random.cpp)
 add_library(lib_database STATIC ${LIB_DATABASE_SRC})
 set_target_properties(lib_database PROPERTIES EXPORT_NAME database OUTPUT_NAME
@@ -59,6 +59,7 @@ target_include_directories(
   PRIVATE src
   PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
          "$<INSTALL_INTERFACE:include>")
+target_link_libraries(lib_database PRIVATE Boost::dynamic_bitset)
 
 install(
   TARGETS lib_database
@@ -92,7 +93,7 @@ if(LIB_DATABASE_TEST_SRC)
   add_executable(lib_database_test ${LIB_DATABASE_TEST_SRC})
   set_target_properties(lib_database_test PROPERTIES OUTPUT_NAME exe/test)
   set_target_cxx_properties_(lib_database_test)
-  target_compile_and_link_options_(lib_database_test Release)
+  target_compile_and_link_options_(lib_database_test ${CMAKE_BUILD_TYPE})
   target_include_directories(lib_database_test PRIVATE src)
   target_link_libraries(lib_database_test PRIVATE GTest::gtest_main
                                                   lib_database)
